added more stuff

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,8 @@
 # Use official Python image
 FROM python:3.11
 
-# Set the working directory
-WORKDIR /app
+# Set the working directory inside the container
+WORKDIR /app/backend
 
 # Copy Python dependencies file
 COPY requirements.txt .
@@ -14,11 +14,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Make the script executable
-RUN chmod +x run_project.sh
+RUN chmod +x run_backend.sh
 
-# Expose backend and frontend ports
+# Expose backend port
 EXPOSE 8080
 
 # Run the application
-CMD ["bash", "./run_project.sh"]
-
+CMD ["bash", "./run_backend.sh"]
